--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,11 +8,11 @@ import Layout from '@layouts/Layout.astro';
 ---
 
 <Layout>
-	<main class="mx-auto max-w-7xl px-6 py-16">
+	<main class="mx-auto max-w-6xl px-4 py-12">
 		<!-- 顶部主区域：左简介 + 右项目 -->
-		<section class="grid grid-cols-1 gap-20 lg:grid-cols-3">
+		<section class="grid grid-cols-1 gap-10 lg:grid-cols-3">
 			<!-- 左侧：简介（暂时用 About 先顶上） -->
-			<aside class="lg:col-span-1">
+			<aside class="max-w-sm lg:col-span-1">
 				<About />
 			</aside>
 
