--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,26 +1,32 @@
-<body class="m-0 bg-white p-0 text-black">
-	<header class="border-neutral-200 border-b">
-		<div class="container">
-			<Navbar />
-		</div>
-	</header>
+---
+import Footer from '@components/Footer.astro';
+import Navbar from '@components/Navbar.astro';
+import { SEO } from 'astro-seo';
+---
 
-	<main>
-		<div class="container">
-			<slot />
-		</div>
-	</main>
+<!doctype html>
+<html lang="en" class="scroll-smooth">
+	<head>
+		<SEO title="Yuhan Qiu | Electrical Engineering" />
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width" />
+	</head>
 
-	<Footer />
-</body>
+	<body class="bg-white text-black">
+		<!-- Navbar -->
+		<header class="border-neutral-200 border-b">
+			<div class="mx-auto max-w-screen-xl px-6">
+				<Navbar />
+			</div>
+		</header>
 
-<style is:global>
-	/* 全站唯一容器 */
-	.container {
-		max-width: 1280px;
-		margin-left: auto;
-		margin-right: auto;
-		padding-left: 24px;
-		padding-right: 24px;
-	}
-</style>
+		<!-- Main content -->
+		<main>
+			<div class="mx-auto max-w-screen-xl px-6">
+				<slot />
+			</div>
+		</main>
+
+		<Footer />
+	</body>
+</html>
