--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -15,14 +15,14 @@
 
 	<div class="space-y-2 pt-4 text-sm">
 		<p>
-			<a href="mailto:your.email@example.com" class="underline underline-offset-4">
-				your.email@example.com
+			<a href="mailto:qiuyuhan66@gmail.com" class="underline underline-offset-4">
+				qiuyuhan66@gmail.com
 			</a>
 		</p>
 
 		<p>
 			<a
-				href="https://www.linkedin.com/in/yourprofile"
+				href="https://www.linkedin.com/in/yuhan-qiu-ee/"
 				target="_blank"
 				class="underline underline-offset-4"
 			>
