--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,9 +25,7 @@ const { title = 'Yuhan Qiu | Electrical Engineering' } = Astro.props as LayoutPr
 	</head>
 
 	<!-- ❗Layout = 透明外壳，不控制宽度 -->
-	<body
-		class="bg-white font-sans text-black dark:bg-black dark:text-white xs:text-[16px] md:text-[18px]"
-	>
+	<body class="bg-white font-sans text-black">
 		<!-- Navbar 可以有 padding，但不限制 max-width -->
 		<Navbar />
 
