--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,11 @@ for (let i = 0; i < remainingProjects.length; i += 3) {
 ---
 
 <Layout>
-	<main class="h-screen snap-y snap-mandatory overflow-y-scroll">
+	<main class="h-screen
+    snap-y
+    snap-proximity
+    overflow-y-scroll
+    scroll-smooth">
 		<!-- =========================
          PAGE 1: INTRO + 2 PROJECTS
     ========================== -->
