--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,11 @@ const { title = 'Yuhan Qiu | Electrical Engineering' } = Astro.props as LayoutPr
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="generator" content={Astro.generator} />
 
-		<link rel="icon" type="image/svg+xml" href={`${import.meta.env.BASE_URL}favicon_pure.svg`} />
+		<link
+			rel="icon"
+			type="image/svg+xml"
+			href={`${import.meta.env.BASE_URL}favicon_pure.svg`}
+		/>
 	</head>
 
 	<body class="bg-white font-sans text-black antialiased">
